--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hexlet/code",
   "version": "1.6.0",
-  "description": "[![Actions Status](https://github.com/Nesterrr/frontend-project-44/workflows/hexlet-check/badge.svg)](https://github.com/Nesterrr/frontend-project-44/actions)",
+  "description": "Brain games cli app, consists of: calc, even, gcd, prime and progression cli games.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -26,9 +26,11 @@
     "brain-prime": "bin/brain-prime.js"
   },
   "dependencies": {
-    "eslint": "^8.30.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0",
     "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "eslint": "^8.33.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5"
   }
 }
